--- a/pages/chat.module.css
+++ b/pages/chat.module.css
@@ -15,6 +15,28 @@
     width:240px;
     background-color: grey;
 }
+#names #details{
+    margin: 13px 15px;   
+     display: flex;
+    height: 53px;
+    width: 211px;
+    border-bottom: white solid 1px;
+}
+#details img{
+    height: 35px;
+    margin-top: 12px;
+    width: 35px;
+}
+#details h3{
+    margin-left: 10px;
+    color: white;
+    font-size: 20px;
+}
+#names a{
+    outline: none;
+    color:white;
+    text-decoration: none;
+}
 #chat #nav{
     width: 100%;
     height: 50px;
