message-proble-solved-by=updating-useeffect

--- a/pages/chat.module.css
+++ b/pages/chat.module.css
@@ -15,7 +15,7 @@
     width:240px;
     background-color: grey;
 }
-#names #details{
+#details{
     margin: 13px 15px;   
      display: flex;
     height: 53px;
